# weather_forecast

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  heroku.yml  pyproject.toml
.github/: dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci_code_validation.yml  ci_deploy.yml  ci_dev_main_push_pipeline.yml  ci_pull_request.yml
app/core/: constants.py  exception.py  model.py  schema.py
app/core/repository/: __init__.py
app/core/repository/sql/: __init__.py  db.py  dependency.py  exception.py  interface.py  repository.py
app/core/web/: __init__.py  configuration.py  settings.py
app/location/: use_case.py
app/location/client/: __init__.py  dto.py  exception.py  interface.py  location_client.py  schema.py
app/location/dependency/: __init__.py  client.py  location.py
app/location/domain/: __init__.py  location.py
app/location/interface/: __init__.py  location.py
app/location/repository/: __init__.py  location.py
app/location/use_case/: __init__.py  location.py
app/location/web/: __init__.py  dto.py  route.py  schema.py
app/weather/: constant.py
app/weather/client/: __init__.py  dto.py  exception.py  interface.py  schema.py  weather_client.py
app/weather/dependency/: __init__.py  client.py  weather_condition.py
app/weather/domain/: __init__.py  weather_condition.py
app/weather/interface/: __init__.py  weather_condition.py
app/weather/repository/: __init__.py  weather_condition.py
app/weather/use_case/: __init__.py  weather_condition.py
app/weather/web/: __init__.py  dto.py  route.py  schema.py
deployment/: Dockerfile  docker.env  local.env
migrations/: env.py
migrations/versions/: 0001ver4119669e_2024_08_04_1245-.py  0002verd6fe5762_2024_08_17_0919.py
tests/: conftest.py
tests/api/: conftest.py
tests/api/location/: test_location.py
tests/api/weather/: __init__.py
tests/integration/: conftest.py
tests/integration/core/fixtures/: __init__.py  unit_of_work.py
tests/integration/location/: conftest.py
tests/integration/location/fixtures/: __init__.py  location_repository.py
tests/integration/location/repository/: test_location_repository.py
tests/integration/weather/: conftest.py
tests/integration/weather/fixtures/: __init__.py  weather_condition_repository.py
tests/integration/weather/repository/: test_weather_condition_repository.py
tests/unit/: conftest.py
tests/unit/core/: conftest.py
tests/unit/core/fixtures/: unit_of_work.py
tests/unit/location/: conftest.py
tests/unit/location/depencency/: test_location.py  test_location_client.py
tests/unit/location/fixtures/: __init__.py  location.py  location_client.py
tests/unit/location/use_case/: test_location.py
tests/unit/location/web/: test_dto.py  test_route.py  test_schema.py
tests/unit/weather/: conftest.py
tests/unit/weather/dependency/: test_weather_client.py  test_weather_condition.py
tests/unit/weather/fixtures/: __init__.py  weather_client.py  weather_condition.py
tests/unit/weather/use_case/: test_weather_condition.py
tests/unit/weather/web/: test_dto.py  test_route.py  test_schema.py
tools/: load_db_models.py  start_web.py
