[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Edhar Strelchanka <strelchenkoedgar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
pydantic = "^2.8.2"
alembic = "^1.13.2"
pytest = "^8.2.2"
pytest-factoryboy = "^2.7.0"
pre-commit = "^3.7.1"
pytest-mock = "^3.14.0"
coverage = "^7.6.0"
pydantic-extra-types = "^2.9.0"
uvicorn = "^0.30.3"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
exclude = [".venv", "tests"]
# Untyped definitions and calls
check_untyped_defs = true
# None and Optional handling
implicit_optional = true
strict_optional = true
# Configuring warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
# Miscellaneous strictness flags
allow_redefinition = false
strict_equality = true
strict_concatenate = false
# Configuring error messages
show_error_codes = true
show_column_numbers = true
show_error_code_links = true
pretty = true
